--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.3.3
+Date: 2022-04-13
+  Changes:
+        - Crusher graphics replacement (APM instead of Yuoki's)
+---------------------------------------------------------------------------------------------------
 Version: 0.3.2
 Date: 2022-04-11
   Changes:
