repair pack requires silica, not zirconia

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,13 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.3.5
+Date: 2022-06-?
+  Changes:
+        - Replaced half of electronic circuits by silica in repair pack.
+        - Added a toolbelt2 tech to give more slots for BZ resources.
+        - Changed titanium and copper balance in LDS for BZ resources.
+        - Added K2 sound for RI air filter buildings.
+
+---------------------------------------------------------------------------------------------------
 Version: 0.3.4
 Date: 2022-04-28
   Changes:
